--- a/Cappy/Dockerfile
+++ b/Cappy/Dockerfile
@@ -1,8 +1,21 @@
+# -------- BUILD STAGE --------
+FROM maven:3.9.9-eclipse-temurin-17 AS builder
+WORKDIR /app
+
+COPY pom.xml .
+RUN mvn dependency:go-offline
+
+COPY src ./src
+RUN mvn clean package -DskipTests
+
+# -------- RUN STAGE --------
 FROM eclipse-temurin:17-jre
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+
+COPY --from=builder /app/target/*.jar app.jar
 
 EXPOSE 10000
 ENV PORT=10000
 
-CMD ["java", "-Dserver.port=10000", "-jar", "app.jar"]
+CMD ["java", "-jar", "app.jar"]
+
